# Langchain-Projects

./: .gitignore  main.py  prompt.py  pyproject.toml  schemas.py
00_general/: 1_genai_gemini_pro.ipynb  2_text_summarization.ipynb
01_text_summarization/: simple_text_summarization.ipynb  simple_text_summarization.py
02_react_agent/: prompt.py  react_agent.py  react_agent_manual_impl.py
02_react_agent/revise/: 2_create_agent_v1_tavily.ipynb
02_react_agent/revise/1_create_agent_from_langchain_step4/: 1_create_agent_v1.ipynb  3_create_agent_v1_pydantic.ipynb
02_react_agent/revise/2_langchain_first_react_agent_step1/: 1_react_agent.ipynb  2_react_agent_output_parser.ipynb
02_react_agent/revise/3_react_agent_from_scratch/: 1_react_agent.ipynb
02_react_agent/revise/4_tool_calling_agent/: 1_create_tool_calling_agent.ipynb  1_tool_calling_agent.ipynb  2_react_reimplementation_with_tool_calling.ipynb
03_function_tools/: function_tool_langchain.py  function_tools.py  function_tools_manual.py
04_rag/: faiss_vector_store.py  ingestion.py  medium_blog.txt  retrieval_chain_lcel.py  retrieval_chain_manual.py
05_langgraph/: react.py
05_langgraph_react_agent/: main.py  nodes.py
06_langgraph_reflection_agent/: chains.py  main.py
07_langgraph_reflexion_agent/: main.py
faiss_index_react/: index.faiss
