[project]
name = "langchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "isort>=6.0.1",
    "langchain>=1.2.0",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.12",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "tavily-python>=0.7.17",
    "langchainhub>=0.1.21",
    "pypdf>=6.1.0",
    "langchain-classic>=1.0.1",
    "langchain-google-genai>=4.1.2",
]
